--- a/src/index.css
+++ b/src/index.css
@@ -538,10 +538,10 @@ div, section, span, p, a {
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	top: 0;
+	top: -100px;
 	width: 100vw;
 	padding: 5vmin;
-	height: 100vh;
+	height: calc(100vh + 100px);
 	background: rgba(255, 255, 255, 0.95);
 	backdrop-filter: blur(2px);
 	z-index: 99;
@@ -570,6 +570,7 @@ div, section, span, p, a {
 .popup ul {
 	margin: 4vmin auto 0 auto;
 	list-style: disc;
+	padding-left: 30px;
 }
 .popup li {
 	font-size: 2.5vmin;
