--- a/src/index.css
+++ b/src/index.css
@@ -583,7 +583,7 @@ div, section, span, p, a {
 	margin: 8vmin auto 0 auto;
 }
 .popup button {
-	margin: 0 5px;
+	margin: 5px;
 }
 
 @media screen and (max-width: 800px) {
